data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1427.wast
;; 8. **Test Description**:     Create a function with mixed `call` and `br_if` instructions where `br_if` targets a `loop` in the function. Check if the function manages stack frames correctly during branch execution.    - **Constraint Checked**: Stack frame consistency during conditional calls and branches.    - **Stack Corruption Check**: Prevents corruption during function calls and conditional branching.

(assert_invalid
  (module
    (func $test-loop-br_if-call
      (loop $L
        (call $dummy)
        (br_if $L (i32.const 1))
      )
    )
    (func $dummy)
  )
  "type mismatch"
)